@@ -23,7 +23,9 @@ EXTRA_DC_FLAGS =
 full-distcheck:
 	make distcheck EXTRA_DC_FLAGS='--enable-html'
 	make distcheck EXTRA_DC_FLAGS='--disable-i18n'
+	make distcheck EXTRA_DC_FLAGS='--disable-nls'
 	make distcheck EXTRA_DC_FLAGS='--without-included-regex'
+	make distcheck EXTRA_DC_FLAGS='--without-included-gettext'
 
 update-regex:
 	HOST=sources.redhat.com && \
